--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,23 @@
 spring:
   application:
     name: file-downloader
+  datasource:
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/threads_db}
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:password}
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
 aws:
-  access-key: "your-access-key"
-  secret-key: "your-secret-key"
+  access-key: "${S3_ACCESS_KEY}"
+  secret-key: "${S3_CONTENT_KEY}"
   s3:
-    endpoint: "http://localhost:9000"
-    bucket-name: "your-bucket-name"
+    endpoint: "${S3_ENDPOINT}"
+    bucket-name: "${S3_BUCKET_NAME}"
